--- a/src/android/plugin.gradle
+++ b/src/android/plugin.gradle
@@ -5,5 +5,5 @@ repositories {
 }
 
 dependencies {
-    compile 'com.smartlook.recording:app:1.8.6-cordova'
+    implementation 'com.smartlook.recording:app:1.8.6-cordova'
 }
